--- a/.github/workflows/buildpushdev.yml
+++ b/.github/workflows/buildpushdev.yml
@@ -6,7 +6,7 @@ on:
 jobs:
   build:
     name: buildpushdev
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
 
