--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,8 +1,10 @@
 name: lint
 on:
   pull_request:
-    branches: [ '**' ]
-
+    branches: ["**"]
+  push:
+    branches:
+      - main
 jobs:
   lint:
     # Condition to skip merge commits
